# dummy-poetry-project

./: .flake8  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
docs/includes/: abbreviations.md
includes/abbreviations/: index.html
search/: search_index.json
styles/: extra.css
